# tictactoe-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: ai.hpp  board.hpp  game.hpp
src/: ai.cc  board.cc  game.cc  main.cc
tests/: CMakeLists.txt  board_test.cc  game_test.cc
